<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_prev_match"
        android:icon="@drawable/ic_action_calendar_today"
        android:enabled="true"
        android:title="@string/match"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_next_match"
        android:icon="@drawable/ic_teams"
        android:enabled="true"
        android:title="@string/teams"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_action_stars"
        android:enabled="true"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>

</menu>
