<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerDetailsActivity">

    <ProgressBar
        android:id="@+id/pb_player_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_player_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:contentDescription="@string/image_player" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_kg"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <TextView
                        android:id="@+id/tv_player_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="45sp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/height_m"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <TextView
                        android:id="@+id/tv_player_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="45sp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_player_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="1dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSecondaryText"/>

            <TextView
                android:id="@+id/tv_player_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"/>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>