<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchDetailActivity">

    <LinearLayout
        android:id="@+id/view_parent_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_date_event_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/lato_regular_xml"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_logo_team_home"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_regular_xml"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tv_formation_home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato_regular_xml"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_home_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato_bold_xml"
                    android:gravity="end|center_vertical" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:fontFamily="@font/lato_regular_xml"
                    android:text="@string/vs"/>
                <TextView
                    android:id="@+id/tv_away_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato_bold_xml"
                    android:gravity="start|center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_logo_team_away"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo_team_away" />

                <TextView
                    android:id="@+id/tv_away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato_regular_xml"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:maxLines="1"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/tv_formation_away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato_regular_xml"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9E9E9E"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_goals_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:text="@string/goals"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_goals_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_shots_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/shots"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_shots_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9E9E9E"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/lineups"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/lato_regular_xml"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_goalkeeper_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/goal_keeper"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_goalkeeper_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_defense_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/defense"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_defense_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_midfield_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/midfield"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_midfield_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_forward_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/forward"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_forward_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_subtitutes_team_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/subtitutes"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/lato_regular_xml"/>

            <TextView
                android:id="@+id/tv_subtitutes_team_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:fontFamily="@font/lato_regular_xml"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>